--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: demo-app
-          image: <your-dockerhub-username>/demo-app
+          image: aayuroxx/demo-app
           ports:
             - containerPort: 8081
